--- a/src/sass/_bootstrap-datetimepicker.scss
+++ b/src/sass/_bootstrap-datetimepicker.scss
@@ -117,58 +117,8 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
         padding: 6px;
     }
 
-    .btn[data-action="incrementHours"]::after {
-        @extend .sr-only;
-        content: "Increment Hours";
-    }
-
-    .btn[data-action="incrementMinutes"]::after {
-        @extend .sr-only;
-        content: "Increment Minutes";
-    }
-
-    .btn[data-action="decrementHours"]::after {
-        @extend .sr-only;
-        content: "Decrement Hours";
-    }
-
-    .btn[data-action="decrementMinutes"]::after {
-        @extend .sr-only;
-        content: "Decrement Minutes";
-    }
-
-    .btn[data-action="showHours"]::after {
-        @extend .sr-only;
-        content: "Show Hours";
-    }
-
-    .btn[data-action="showMinutes"]::after {
-        @extend .sr-only;
-        content: "Show Minutes";
-    }
-
-    .btn[data-action="togglePeriod"]::after {
-        @extend .sr-only;
-        content: "Toggle AM/PM";
-    }
-
-    .btn[data-action="clear"]::after {
-        @extend .sr-only;
-        content: "Clear the picker";
-    }
-
-    .btn[data-action="today"]::after {
-        @extend .sr-only;
-        content: "Set the date to today";
-    }
-
     .picker-switch {
         text-align: center;
-
-        &::after {
-            @extend .sr-only;
-            content: "Toggle Date and Time Screens";
-        }
 
         td {
             padding: 0;
@@ -210,16 +160,6 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
                 background: none;
                 color: $bs-datetimepicker-disabled-color;
                 cursor: not-allowed;
-            }
-
-            &.prev::after {
-                @extend .sr-only;
-                content: "Previous Month";
-            }
-
-            &.next::after {
-                @extend .sr-only;
-                content: "Next Month";
             }
         }
 
@@ -268,7 +208,8 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
                 &:before {
                     content: '';
                     display: inline-block;
-                    border: 0 0 7px 7px solid transparent;
+                    border: solid transparent;
+                    border-width: 0 0 7px 7px;
                     border-bottom-color: $bs-datetimepicker-active-bg;
                     border-top-color: $bs-datetimepicker-secondary-border-color-rgba;
                     position: absolute;
