--- a/src/less/_bootstrap-datetimepicker.less
+++ b/src/less/_bootstrap-datetimepicker.less
@@ -1,8 +1,8 @@
-/*!
- * Datetimepicker for Bootstrap 3
- * version : 4.17.48
- * https://github.com/Eonasdan/bootstrap-datetimepicker/
- */
+ /*!
+   * Bootstrap Datetime Picker v4.17.49
+   * Copyright 2015-2020 Jonathan Peterson
+   * Licensed under MIT (https://github.com/Eonasdan/bootstrap-datetimepicker/blob/master/LICENSE)
+   */
 @bs-datetimepicker-timepicker-font-size: 1.2em;
 @bs-datetimepicker-active-bg: @btn-primary-bg;
 @bs-datetimepicker-active-color: @btn-primary-color;
@@ -336,7 +336,7 @@
             line-height: 27px;
         }
     }
-	
+
 	&.wider {
 		width: 21em;
 	}
