native date lib

--- a/src/sass/_tempusdominus-bootstrap-4.scss
+++ b/src/sass/_tempusdominus-bootstrap-4.scss
@@ -49,7 +49,7 @@ body.tempusdominus-bootstrap-datetimepicker-widget-day-click {
         &.tempusdominus-bootstrap-datetimepicker-widget-with-feather-icons {
           width: 16rem;
         }
-        
+
         &.tempusdominus-bootstrap-datetimepicker-widget-with-calendar-weeks {
           width: 16rem;
 
@@ -386,7 +386,7 @@ body.tempusdominus-bootstrap-datetimepicker-widget-day-click {
         }
     }
 
-    &.usetwentyfour {
+    &.useTwentyfour {
         td.hour {
             height: 27px;
             line-height: 27px;
